# rviz-release

./: 0001-Allow-absolute-RPATH-to-be-set-on-rviz2-executable.patch  0001-Drop-system-assimp-dependency-to-force-vendoring.patch  0001-Migrate-patch-from-Dashing.patch  0001-Restore-clobbered-dh_shlibdeps-patches-to-debian-rul.patch  0001-Tell-dh_shlibdeps-where-to-find-rviz_ogre_vendor-plu.patch  0001-Tell-dh_shlibdeps-where-to-find-vendor-libraries.patch  0001-migrate-crystal-patch.patch  0001-migrate-patch-from-crystal.patch  0002-Migrate-patch-from-Dashing.patch  0002-Rebase-from-release-foxy-rviz2.patch  0002-Rebase-from-release-foxy-rviz_assimp_vendor.patch  0002-Rebase-from-release-foxy-rviz_ogre_vendor.patch  0002-Rebase-from-release-foxy-rviz_rendering.patch  0002-Rebase-from-release-foxy-rviz_rendering_tests.patch  0002-Rebase-from-release-humble-rviz_rendering.patch  0002-Tell-dh_shlibdeps-where-to-find-rviz_ogre_vendor-plu.patch  0003-Placing-debian-template-files.patch  0004-Migrate-patch-from-Dashing.patch  0004-Tell-dh_shlibdeps-where-to-find-vendor-libraries.patch  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store
debian/: changelog  control  copyright  gbp.conf  rules  rules.em  rules.em.orig
include/rviz_common/: adapter_filter_display.hpp  display.hpp  display_context.hpp  frame_position_tracking_view_controller.hpp  render_panel.hpp  visualization_frame.hpp  visualization_manager.hpp
ogre_media/models/: rviz_capsule.mesh
rpm/: ros-galactic-rviz-assimp-vendor.spec  ros-galactic-rviz-common.spec  ros-galactic-rviz-default-plugins.spec  ros-galactic-rviz-ogre-vendor.spec  ros-galactic-rviz-rendering-tests.spec  ros-galactic-rviz-rendering.spec  ros-galactic-rviz-visual-testing-framework.spec  ros-galactic-rviz2.spec  ros-humble-rviz-assimp-vendor.spec  ros-humble-rviz-common.spec  ros-humble-rviz-default-plugins.spec  ros-humble-rviz-ogre-vendor.spec  ros-humble-rviz-rendering-tests.spec  ros-humble-rviz-rendering.spec  ros-humble-rviz-visual-testing-framework.spec  ros-humble-rviz2.spec  ros-iron-rviz-assimp-vendor.spec  ros-iron-rviz-common.spec  ros-iron-rviz-default-plugins.spec  ros-iron-rviz-ogre-vendor.spec  ros-iron-rviz-rendering-tests.spec  ros-iron-rviz-rendering.spec  ros-iron-rviz-visual-testing-framework.spec  ros-iron-rviz2.spec  ros-jazzy-rviz-assimp-vendor.spec  ros-jazzy-rviz-common.spec  ros-jazzy-rviz-default-plugins.spec  ros-jazzy-rviz-ogre-vendor.spec  ros-jazzy-rviz-rendering-tests.spec  ros-jazzy-rviz-rendering.spec  ros-jazzy-rviz-visual-testing-framework.spec  ros-jazzy-rviz2.spec  ros-kilted-rviz-assimp-vendor.spec  ros-kilted-rviz-common.spec  ros-kilted-rviz-default-plugins.spec  ros-kilted-rviz-ogre-vendor.spec  ros-kilted-rviz-rendering-tests.spec  ros-kilted-rviz-rendering.spec  ros-kilted-rviz-resource-interfaces.spec  ros-kilted-rviz-visual-testing-framework.spec  (+17 more)
rviz2/: CHANGELOG.rst  CMakeLists.txt  package.xml
rviz2/src/: main.cpp
rviz2/test/tools/: send_lots_of_points_node.cpp
rviz_assimp_vendor/: CHANGELOG.rst  CMakeLists.txt  package.xml
rviz_common/: CHANGELOG.rst  CMakeLists.txt  package.xml  rviz_common-extras.cmake
rviz_common/test/: config_test.cpp  display_factory_test.cpp  display_test.cpp  mock_display_context.hpp  property_test.cpp  uniform_string_stream_test.cpp  visualizer_app_test.cpp
rviz_default_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins_description.xml  rviz_default_plugins-extras.cmake
rviz_ogre_vendor/: CHANGELOG.rst  CMakeLists.txt  package.xml  rviz_ogre_vendor-extras.cmake.in
rviz_ogre_vendor/patches/: 0005-mangle-library-names-used-by-rviz.patch  0006-cmake-3-10.patch  0006-remove-binary_function.patch
rviz_rendering/: CHANGELOG.rst  CMakeLists.txt  package.xml  rviz_rendering-extras.cmake
rviz_rendering_tests/: CHANGELOG.rst  CMakeLists.txt  package.xml
rviz_rendering_tests/test/: mesh_loader_test.cpp
rviz_resource_interfaces/: CHANGELOG.rst  package.xml
rviz_visual_testing_framework/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/: visual_test_fixture.cpp
src/rviz_common/: add_display_dialog.cpp  add_display_dialog.hpp  display.cpp  display_factory.hpp  display_group.cpp  load_resource.cpp  uniform_string_stream.cpp  visualization_frame.cpp  visualization_manager.cpp  yaml_config_reader.cpp
src/rviz_default_plugins/: ros_resource_retriever.cpp
src/rviz_rendering/: string_helper.cpp
test/: config_test.cpp  test_rviz_ogre_media_exports.cpp
test/rviz_rendering/: mesh_shape_test.cpp  string_helper_test.cpp
(+256 files in other folders)
